--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -18,7 +18,7 @@
         <div class="container">
             <a href="/">PetDevShop</a>
             <form method="GET" action="/search">
-                <input type="search" name="q" placeholder="Pesquise por raça" value="{{query}}" />
+                <input type="search" name="q" placeholder="Pesquise por nome" value="{{query}}" />
             </form>
         </div>
     </header>
